--- a/ReceiveMessageApp/app/src/main/AndroidManifest.xml
+++ b/ReceiveMessageApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.alicja.receivemessageapp">
 
+    <uses-permission android:name="com.example.alicja.sendmessageapp.my_permissions.MY_PERMISSION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +22,8 @@
         <receiver
             android:name=".MyBroadcastReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true"
+            android:permission="com.example.alicja.sendmessageapp.my_permissions.MY_PERMISSION">
 
             <intent-filter>
                 <action android:name="com.example.alicja.sendmessageapp.MESSAGE_INTENT"/>
