--- a/ReceiveMessageApp/app/src/main/AndroidManifest.xml
+++ b/ReceiveMessageApp/app/src/main/AndroidManifest.xml
@@ -19,17 +19,11 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name=".MyBroadcastReceiver"
+        <service
+            android:name=".ServiceBroadcast"
             android:enabled="true"
-            android:exported="true"
-            android:permission="com.example.alicja.sendmessageapp.my_permissions.MY_PERMISSION">
+            android:exported="true" />
 
-            <intent-filter>
-                <action android:name="com.example.alicja.sendmessageapp.MESSAGE_INTENT"/>
-            </intent-filter>
-
-        </receiver>
     </application>
 
 </manifest>
